--- a/docroot/profiles/contrib/openy/themes/openy_themes/openy_lily/sass/legacy/_legacy.scss
+++ b/docroot/profiles/contrib/openy/themes/openy_themes/openy_lily/sass/legacy/_legacy.scss
@@ -8,6 +8,8 @@
 @import 'membership';
 @import 'mindbody';
 @import 'icomoon';
+@import 'sidebar';
+@import 'childcare';
 
 /* Give page */
 .path-give {
