--- a/docroot/profiles/contrib/openy/themes/openy_themes/openy_lily/sass/style.scss
+++ b/docroot/profiles/contrib/openy/themes/openy_themes/openy_lily/sass/style.scss
@@ -75,7 +75,7 @@
 @import 'misc/program';
 /*@import 'misc/news';*/
 /*@import 'misc/blog';*/
-@import 'misc/sidebar';
+/*@import 'misc/sidebar';*/
 @import 'misc/wysiwyg';
 @import 'global/openy-lily-styles';
 @import 'misc/templates';
