--- a/docroot/profiles/contrib/openy/themes/openy_themes/openy_lily/templates/node/include/node--landing-page--three-columns.html.twig
+++ b/docroot/profiles/contrib/openy/themes/openy_themes/openy_lily/templates/node/include/node--landing-page--three-columns.html.twig
@@ -7,11 +7,16 @@
             <article{{ attributes.removeClass(header_classes).removeClass(content_classes).addClass(sidebar_classes) }}>
               {{ content.field_sidebar_content }}
             </article>
+            <div class="visible-sm sidebar-promos promos">
+              <article{{ attributes.removeClass(header_classes).removeClass(content_classes).addClass(sidebar_classes) }}>
+                {{ content.field_sidebar_content_extra }}
+              </article>
+            </div>
           </div>
           <div class="main-region col-sm-7 col-md-6">
             {{ content.field_content }}
           </div>
-          <div class="sidebar-region sidebar-region-extra col-md-3 sidebar-promos promos">
+          <div class="sidebar-region sidebar-region-extra col-md-3 sidebar-promos promos hidden-sm">
             <article{{ attributes.removeClass(header_classes).removeClass(content_classes).addClass(sidebar_classes) }}>
               {{ content.field_sidebar_content_extra }}
             </article>
