--- a/docroot/profiles/contrib/openy/themes/openy_themes/openy_lily/templates/ymca-blocks/promo-block.html.twig
+++ b/docroot/profiles/contrib/openy/themes/openy_themes/openy_lily/templates/ymca-blocks/promo-block.html.twig
@@ -13,32 +13,20 @@
  * @ingroup themeable
  */
 #}
-
-{% set classes = ['richtext'] %}
-{% if is_home %}
-  {% set classes = classes|merge(['col-md-4', 'col-sm-6']) %}
-{% endif %}
-
-<div{{ attributes.addClass(classes) }}>
+<article class="block featured-highlights-block blog-photo">
   {% if link %}
-    <a class="wrapper" href="{{ link }}" title="{{ link_text }}">
-      <div class="img-crop img-crop-horizontal">{{ image }}</div>
-      <h2>{{ header }}</h2>
-      <div class="promo-text">{{ content }}</div>
+    <a href="{{ link }}" title="{{ link_text }}" rel="bookmark">
+  {% endif %}
+    <div class="inner-wrapper">
+      <div class="blog-up">
+        <div class="img-crop img-crop-horizontal">{{ image }}</div>
+      </div>
+      <div class="blog-heading">
+        <h3><span>{{ header }}</span></h3>
+        <p>{{ content }}</p>
+      </div>
+    </div>
+  {% if link %}
     </a>
-  {% else %}
-    <div class="text-promo">
-      {{ _self.block_content(image, header, content) }}
-    </div>
   {% endif %}
-</div>
-
-{% macro block_content(image, header, content) %}
-  {% if image[0] %}
-    <div class="img-crop img-crop-horizontal">
-      {{ image }}
-    </div>
-  {% endif %}
-  <h3>{{ header }}</h3>
-  {{ content }}
-{% endmacro %}
+</article>
