--- a/docroot/themes/custom/ymca/css/style.css
+++ b/docroot/themes/custom/ymca/css/style.css
@@ -5632,11 +5632,11 @@ a.wrapper:hover {
   }
 
   .navbar > .container .navbar-brand {
-    left: 30%;
+    left: 35%;
     float: none;
     margin-left: -24px;
     padding: 0;
-    height: 80%;
+    height: 70%;
     background-position: left top;
     background-size: contain;
   }
@@ -5647,7 +5647,7 @@ a.wrapper:hover {
   }
 
   .viewport {
-    padding-top: 100px;
+    padding-top: 80px;
   }
 
   .collapsing-in .nav-global, .in .nav-global, .collapsing-out .nav-global {
@@ -5798,6 +5798,8 @@ a.wrapper:hover {
     width: 100%;
     top: 0;
     box-shadow: 0 0 8px -3px #000;
+    height: 80px;
+    min-height: 80px;
   }
 
   .navbar-fixed-top {
